--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
           <div class="skills">
             <section class="tools">
               <h3>Habilidades Profissionais</h3>
-              <ul>
+              <ul id="profile.skills.hardSkills">
                 <li>
-                  <img src="/assets/img/icons/tools/react.svg" alt="icone react">
+                  Carregando...
                 </li>
                 <li>
-                  <img src="/assets/img/icons/tools/nodejs.svg" alt="icone node">
+                  Carregando...
                 </li>
                 <li>
-                  <img src="/assets/img/icons/tools/git.svg" alt="icone github">
+                  Carregando...
                 </li>
               </ul>
             </section>
@@ -73,7 +73,7 @@
             <section class="personal">
               <h3>Habilidades Pessoais</h3>
               <ul id="profile.skills.softskills">
-                
+                <li>Carregando...</li>
               </ul>
             </section>
           </div>
