--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
           <h2>Idiomas</h2>
         </button>
         <div class="content">
-          <ul">
-            <li>Português</li>
-            <li>inglês básico</li>
+          <ul id="languages">
           </ul>
         </div>
       </section>
