--- a/index.html
+++ b/index.html
@@ -97,16 +97,8 @@
         <div class="content">
           <ul class="portfolio">
             <li>
-              <span class="title github">Criando um app de lembrete</span>
-              <a href="#" target="_blank">Google</a>
-            </li>
-            <li>
-              <span class="title">Criando um app de lembrete</span>
-              <a href="#" target="_blank">Google</a>
-            </li>
-            <li>
-              <span class="title github">Criando um app de lembrete</span>
-              <a href="#" target="_blank">Google</a>
+              <h3 class="github">Carregando...</h3>
+              <a href="#" target="_blank">Carregando...</a>
             </li>
           </ul>
         </div>
