--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         <div class="content">
           <ul class="experience">
             <li>
-              <h3 class="title">Front-end Developer / Freelancer</h3>
-              <p class="period">NOV 2021 - Current</p>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio itaque tempora totam odio veniam hic modi quia quisquam expedita repellat facere corporis consequuntur quam, assumenda quaerat odit soluta, voluptatum et?</p>
+              <h3 class="title">Carregando</h3>
+              <p class="period">...</p>
+              <p>...</p>
             </li>
           </ul>
         </div>
