--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img
           id="profile.photo"
           class="photo"
-          src="assets/kjgkghjghj.png"
+          src="assets/img/my-photo.png"
           alt="foto do perfil"
           loading="lazy"
         />
